[gd_scene load_steps=4 format=3 uid="uid://bwy0r7d4y8r1a"]

[ext_resource type="Script" path="res://itens/item_holder.gd" id="1_3hc54"]
[ext_resource type="Resource" uid="uid://ckognh5shqlag" path="res://itens/resource/PuloDuploItem.tres" id="2_5y76q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kwfod"]
radius = 80.399

[node name="ItemHolder" type="Area2D"]
script = ExtResource("1_3hc54")
item = ExtResource("2_5y76q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kwfod")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
color = Color(0.662745, 0.552941, 0.317647, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -40.0
offset_top = -48.0
offset_right = 40.0
offset_bottom = 48.0
color = Color(0, 0, 0, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
